infra/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-thesis-radar
  namespace: open-thesis-radar
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - open-thesis-radar.stud.k8s.aet.cit.tum.de
      secretName: open-thesis-radar-tls
  rules:
    - host: open-thesis-radar.stud.k8s.aet.cit.tum.de
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: thesis-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user-interface
                port:
                  number: 80
